samples/_failures_safe/1761606773_04a668_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_800fbe41.c: In function ‘main’:
./samples/SAFE/__tmp_800fbe41.c:162:12: error: missing terminating " character
  162 |     printf("Type\t
      |            ^~~~~~~
./samples/SAFE/__tmp_800fbe41.c:162:5: error: expected expression at end of input
  162 |     printf("Type\t
      |     ^~~~~~
./samples/SAFE/__tmp_800fbe41.c:162:5: error: expected declaration or statement at end of input
